ProductOverview.jsx created ✔

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Exile&family=Mozilla+Headline:wght@200..700&family=Playwrite+AU+QLD:wght@100..400&display=swap");
 @import "tailwindcss";
+
+@theme{
+    --color-primary:#FBFBFB;
+    --color-secondary:#393E46;
+    --color-accent:#C5BAFF;
+    --font-fancy:'Exile', sans-serif;
+}
