Add To Cart Complete ✔

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,6 @@
 @theme{
     --color-primary:#FBFBFB;
     --color-secondary:#393E46;
-    --color-accent:#C5BAFF;
+    --color-accent:#483AA0;
     --font-fancy:'Exile', sans-serif;
 }
